@@ -13,6 +13,8 @@ Changelog:
 		- added Arabic
 		- added Hebrew (thanks, zvi-yamin!)
 	Added option to select and force the default renderer
+	Fixed Samsung 2012 TVs timeout (thanks, troop!)
+	
 
 1.52.1 - 2012-04-06
 
